# skyfi-cli

./: .gitignore  Cargo.toml  README.md  install.sh  openapi.json
.github/workflows/: release.yml
src/: cli.rs  client.rs  client_test.rs  config.rs  config_test.rs  error.rs  main.rs  openapi_contract_tests.rs  output.rs  output_test.rs  research.rs  research_test.rs  types.rs
src/commands/: alerts.rs  alerts_test.rs  archives.rs  archives_test.rs  config.rs  config_test.rs  feasibility.rs  feasibility_test.rs  mod.rs  notifications.rs  orders.rs  orders_test.rs  research.rs
tests/: hygiene.rs
