[package]
name = "skyfi-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the SkyFi Platform API"
license = "MIT"

[[bin]]
name = "skyfi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
